--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimary"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.londonappbrewery.iampoor.MainActivity">
+
+    <TextView
+        android:id="@+id/text_i_am"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="6dp"
+        android:text="@string/title"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50sp" />
+
+    <TextView
+        android:id="@+id/text_poor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/text_i_am"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="6dp"
+        android:layout_toEndOf="@+id/text_i_am"
+        android:layout_toRightOf="@+id/text_i_am"
+        android:text="@string/ending"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/image_coal"
+        android:layout_width="261dp"
+        android:layout_height="205dp"
+        android:layout_below="@+id/text_i_am"
+        android:layout_alignStart="@+id/image_poor_man"
+        android:layout_alignLeft="@+id/image_poor_man"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="17dp"
+        app:srcCompat="@drawable/coal" />
+
+    <ImageView
+        android:id="@+id/image_poor_man"
+        android:layout_width="260dp"
+        android:layout_height="204dp"
+        android:layout_alignStart="@+id/text_i_am"
+        android:layout_alignLeft="@+id/text_i_am"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-18dp"
+        android:layout_marginLeft="-18dp"
+        android:layout_marginBottom="0dp"
+        app:srcCompat="@drawable/poor" />
 
 </RelativeLayout>
